# NLP_AI_ThinkTank

./: .gitignore  Dockerfile  Introduction.py  README.md  database.db  pyproject.toml  requirements.txt  test.ipynb
ai_thinktank/: main.py
ai_thinktank/configs/: config.json
ai_thinktank/database/: Manager.py  __init__.py
ai_thinktank/models/: gemini.py  secrest.json
ai_thinktank/objects/: Chatbot.py  Coordinator.py  Debate.py  Expert.py  PageObject.py  StreamHandler.py  Vocabulary.py  Worker.py
ai_thinktank/pages/: Evaluate_topic.py
dear-diary/database/: __init__.py  manager.py
dear-diary/objects/: chatbot.py  page_object.py
diary/: main.py
diary/api/: model.py
diary/database/: __init__.py  manager.py
diary/models/: gemini.py  phi2.py
diary/objects/: __init__.py  chatbot.py  page_object.py  utils.py
faiss_index/: index.faiss  index.pkl
pages/: 💬 Debate.py  💬 Debate_Feature.py
utils/: Debate.py
